src/objects/Change__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Changes</relationshipLabel>
        <relationshipName>Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Denied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Denied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Change</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Change-{0000}</displayFormat>
        <label>Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Approve_own_change</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISCHANGED( Approved__c ) ,  CreatedById =   $User.Id  )</errorConditionFormula>
        <errorMessage>You cannot approve your own change</errorMessage>
    </validationRules>
</CustomObject>